--- a/week-2/basics.html
+++ b/week-2/basics.html
@@ -38,16 +38,42 @@
 
     <script>
         //base for elements: document.getElementById('').innerHTML += 
+        //const myName ="Ben"
+        let myName = "Ben";
+        myName = "the Sportshead";
+
+        console.log(myName);
         //Arithmetic
-
-
-
+        document.getElementById("multi").innerHTML += "13 x 27 = " + 13*27;
+        document.getElementById("division").innerHTML += "6 / 2 = " + 6/2;
+        document.getElementById("remainder").innerHTML += "4 % 3 = " +4%3;
+        document.getElementById("exponents").innerHTML += "2 ** 3 = " +2**3;
+        let incrementNumber = 2;
+        document.getElementById("increment").innerHTML += "2++ = " + incrementNumber++;
+        document.getElementById("increment").innerHTML += "<br> ++3 = " + ++incrementNumber;
+        document.getElementById("decrement").innerHTML += "4-- = " + incrementNumber--;
+        document.getElementById("decrement").innerHTML += "<br> --3 = " + --incrementNumber;
 
         //Assignment
+        document.getElementById("notSign").innerHTML += "!5 = " + !5;
+        document.getElementById("notSign").innerHTML += " <br> ! = " + !"";
+
+        let addToNum =5;
+        addToNum += 2;
+        document.getElementById("addTo").innerHTML += "5 += 2 =  " + addToNum;
+        let addToString = "Ben. "
+        addToString += "Number? Ten"
+        document.getElementById("addTo").innerHTML += "<br> Ben. += Number? Ten = " + addToString;
 
 
 
         //Comparison
+        document.getElementById("equal").innerHTML += " 3 == '3' = " + (3 == '3');
+        document.getElementById("equalVT").innerHTML += " 3 === '3' = " + (3 ==='3');
+        document.getElementById("nEqual").innerHTML += " 3 != '3' = " + (3 != '3');
+        document.getElementById("nEqualVT").innerHTML += " 3 !== '3' = " + (3 !== '3');
+        document.getElementById("gThan").innerHTML += " 3 > 2 = " + (3 > 2);
+        document.getElementById("LThanOrEqual").innerHTML += " 3 < 2 = " + (3 < 2);
     </script>
 </body>
 </html>
