I misspelled script are you kidding me

--- a/midterm-1/todo.html
+++ b/midterm-1/todo.html
@@ -13,6 +13,6 @@
         <hr>
     <button onclick="summarizeList()">Summarize List</button>
     <p id="summary"></p>
-    <sript src="todo.js"></sript>
+    <script src="todo.js"></script>
 </body>
 </html>
